--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "type": "module",
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "bun build",
-    "prepublishOnly": "bun run build"
+    "build": "bun build src/index.ts --outdir dist --target node --minify",
+    "prepublishOnly": "bun run build",
+    "test": "bun test"
   },
   "devDependencies": {
     "@types/bun": "latest",
