--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gleam-js",
+  "name": "beam-js",
   "version": "0.1.0",
-  "description": "A wrapper around window, document, event, etc. to be called from Gleam.",
+  "description": "A wrapper around window, document, event, etc. to be called from BEAM languages.",
   "type": "module",
   "main": "./dist/index.js",
   "exports": "./dist/index.js",
