--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "luminix.dev/fds",
+  "name": "luminix.dev/fnds",
   "version": "0.1.0",
   "description": "A wrapper around window, document, event, etc. to be called from BEAM languages.",
   "type": "module",
